front end things
front end things

front end things

front end things

front end things

--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,30 @@
-lmi for all
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>HotJob</title>
+		<link rel="stylesheet" href="css/metro-bootstrap.css">
+		<link rel="stylesheet" href="css/styles.css">
+		<script src="js/jquery/jquery.min.js"></script>
+		<script src="js/jquery/jquery.widget.min.js"></script>
+		<script src="js/metro/metro.min.js"></script>
+	</head>
+	<body class="metro">
+		<nav class="navigation-bar light">
+			<nav class="navigation-bar-content">
+				<item class="element ">JOB HUB</item>
+				<div class="element input-element place-right">
+					<form >
+						<div class="input-control text">
+							<input type="text" placeholder="Search...">
+						</div>
+					</form>
+				</div>
+			</nav>
+		</nav>
+		<div class="tile double live dark" data-role="live-tile" data-effect="slideDown" data-click="transform">
+			<div class="tile-content">
+				<p>hello</p>
+			</div>
+		</body>
+	</html>
