added maps, example functionality

--- a/www/index.html
+++ b/www/index.html
@@ -22,9 +22,36 @@
 				</div>
 			</nav>
 		</nav>
-		<div class="tile double live dark" data-role="live-tile" data-effect="slideDown" data-click="transform">
-			<div class="tile-content">
-				<p>hello</p>
+		<div class="main">
+			<div class="tile double bg-blue" data-role="live-tile" data-effect="slideDown" data-click="transform">
+				<div class="tile-content">
+				</div>
+				<div class="tile-status">
+					<span class="name">Yo</span>
+				</div>
 			</div>
-		</body>
-	</html>
+			<div class="tile double bg-amber" data-role="live-tile" data-effect="slideDown" data-click="transform">
+				<div class="tile-content">
+				</div>
+				<div class="tile-status">
+					<span class="name">Yo</span>
+				</div>
+			</div>
+			<div class="tile double bg-red" data-role="live-tile" data-effect="slideDown" data-click="transform">
+				<div class="tile-content">
+					<iframe
+					width="250"
+					height="120"
+					frameborder="0" style="border:0"
+					src="https://www.google.com/maps/embed/v1/place?key=AIzaSyChxIfLP34zKgYgSByBJxgW16esZtwWOqw
+					&q=Space+Needle,Seattle+WA">
+					</iframe>
+				</div>
+				<div class="tile-status">
+					<span class="name">Yo</span>
+				</div>
+			</div>
+		</div>
+		
+	</body>
+</html>
