Large map and thing with extra draggable-ness

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,22 @@
 			</nav>
 		</nav>
 		<div class="main">
+
+			<div class="tile quadro quadro-vertical bg-red" data-role="live-tile" data-effect="slideDown" data-click="transform">
+				<div class="tile-content">
+					<iframe
+					width="580"
+					height="580"
+					frameborder="0" style="border:0"
+					src="https://www.google.com/maps/embed/v1/place?key=AIzaSyChxIfLP34zKgYgSByBJxgW16esZtwWOqw
+					&q=Space+Needle,Seattle+WA">
+					</iframe>
+				</div>
+				<div class="tile-status">
+					<span class="name">Yo</span>
+				</div>
+			</div>
+			
 			<div class="tile double bg-blue" data-role="live-tile" data-effect="slideDown" data-click="transform">
 				<div class="tile-content">
 				</div>
@@ -37,20 +53,7 @@
 					<span class="name">Yo</span>
 				</div>
 			</div>
-			<div class="tile double bg-red" data-role="live-tile" data-effect="slideDown" data-click="transform">
-				<div class="tile-content">
-					<iframe
-					width="250"
-					height="120"
-					frameborder="0" style="border:0"
-					src="https://www.google.com/maps/embed/v1/place?key=AIzaSyChxIfLP34zKgYgSByBJxgW16esZtwWOqw
-					&q=Space+Needle,Seattle+WA">
-					</iframe>
-				</div>
-				<div class="tile-status">
-					<span class="name">Yo</span>
-				</div>
-			</div>
+			
 		</div>
 		
 	</body>
