--- a/www/index.html
+++ b/www/index.html
@@ -5,9 +5,21 @@
 		<title>HotJob</title>
 		<link rel="stylesheet" href="css/metro-bootstrap.css">
 		<link rel="stylesheet" href="css/styles.css">
-		<script src="js/jquery/jquery.min.js"></script>
-		<script src="js/jquery/jquery.widget.min.js"></script>
-		<script src="js/metro/metro.min.js"></script>
+		<script src="js/jquery.js"></script>
+		<script src="../api/jquery-2.1.1.min.js"></script>
+		<script src="../api/ajaxcalls.js"></script>
+		<script>
+			$('#textfield').bind("enterKey",function(e){
+		alert("Enter");
+		});
+		$('textarea').keyup(function(e){
+		if(e.keyCode == 13)
+		{
+		$(this).trigger("enterKey");
+		}
+		});
+		
+		</script>
 	</head>
 	<body class="metro">
 		<nav class="navigation-bar light">
@@ -16,15 +28,14 @@
 				<div class="element input-element place-right">
 					<form >
 						<div class="input-control text">
-							<input type="text" placeholder="Search...">
+							<input id="textfield" type="text" placeholder="Search...">
 						</div>
 					</form>
 				</div>
 			</nav>
 		</nav>
 		<div class="main">
-
-			<div class="tile quadro quadro-vertical bg-red" data-role="live-tile" data-effect="slideDown" data-click="transform">
+			<div class="tile quadro quadro-vertical bg-lightGreen" data-role="live-tile" data-effect="slideDown" data-click="transform">
 				<div class="tile-content">
 					<iframe
 					width="580"
@@ -38,7 +49,6 @@
 					<span class="name">Yo</span>
 				</div>
 			</div>
-			
 			<div class="tile double bg-blue" data-role="live-tile" data-effect="slideDown" data-click="transform">
 				<div class="tile-content">
 				</div>
@@ -46,8 +56,18 @@
 					<span class="name">Yo</span>
 				</div>
 			</div>
+			<div class="tile bg-blue" data-click="transform">
+				<div class="tile-content icon">
+					<i class="fa fa-map-marker"></i>
+				</div>
+				<div class="tile-status">
+					<span class="name">1337 jobs nearby <i class="fa fa-map-marker"></i>
+					</span>
+				</div>
+			</div>
+			
 			<div class="tile double bg-amber" data-role="live-tile" data-effect="slideDown" data-click="transform">
-				<div class="tile-content">
+				<div class="tile-content fa fa-map-marker .on-left-more ">
 				</div>
 				<div class="tile-status">
 					<span class="name">Yo</span>
