--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 		<script src="js/jquery.js"></script>
 		<script src="../api/jquery-2.1.1.min.js"></script>
 		<script src="../api/ajaxcalls.js"></script>
-		<script src="../api/chart.js"></script>
+		<script src="js/chart.js"></script>
 		<script>
 			$('#textfield').bind("enterKey",function(e){
 		alert("Enter");
