--- a/www/index.html
+++ b/www/index.html
@@ -5,37 +5,25 @@
 		<title>HotJob</title>
 		<link rel="stylesheet" href="css/metro-bootstrap.css">
 		<link rel="stylesheet" href="css/styles.css">
-		<script src="js/jquery.js"></script>
 		<script src="../api/jquery-2.1.1.min.js"></script>
 		<script src="../api/ajaxcalls.js"></script>
-		<script>
-			$('#textfield').bind("enterKey",function(e){
-		alert("Enter");
-		});
-		$('textarea').keyup(function(e){
-		if(e.keyCode == 13)
-		{
-		$(this).trigger("enterKey");
-		}
-		});
+		<script src="../api/async.js"></script>
 		
-		</script>
 	</head>
 	<body class="metro">
 		<nav class="navigation-bar light">
 			<nav class="navigation-bar-content">
-				<item class="element ">JOB HUB</item>
+				<item class="element" id="title">JOB HUB</item>
 				<div class="element input-element place-right">
-					<form >
-						<div class="input-control text">
-							<input id="textfield" type="text" placeholder="Search...">
-						</div>
-					</form>
+					
+					<div class="input-control text">
+						<input id="textfield" type="text" placeholder="Search...">
+					</div>
 				</div>
 			</nav>
 		</nav>
 		<div class="main">
-			<div class="tile quadro quadro-vertical bg-lightGreen" data-role="live-tile" data-effect="slideDown" data-click="transform">
+			<div class="tile quadro quadro-vertical bg-lightGreen" data-click="transform">
 				<div class="tile-content">
 					<iframe
 					width="580"
@@ -45,28 +33,15 @@
 					&q=Space+Needle,Seattle+WA">
 					</iframe>
 				</div>
-				<div class="tile-status">
-					<span class="name">Yo</span>
-				</div>
 			</div>
-			<div class="tile double bg-blue" data-role="live-tile" data-effect="slideDown" data-click="transform">
+			<div class="tile double bg-blue" data-click="transform">
 				<div class="tile-content">
 				</div>
 				<div class="tile-status">
 					<span class="name">Yo</span>
 				</div>
 			</div>
-			<div class="tile bg-blue" data-click="transform">
-				<div class="tile-content icon">
-					<i class="fa fa-map-marker"></i>
-				</div>
-				<div class="tile-status">
-					<span class="name">1337 jobs nearby <i class="fa fa-map-marker"></i>
-					</span>
-				</div>
-			</div>
-			
-			<div class="tile double bg-amber" data-role="live-tile" data-effect="slideDown" data-click="transform">
+			<div class="tile double bg-amber" data-click="transform">
 				<div class="tile-content fa fa-map-marker .on-left-more ">
 				</div>
 				<div class="tile-status">
@@ -74,7 +49,42 @@
 				</div>
 			</div>
 			
+			<div class="tile double bg-crimson" data-click="transform">
+				<div class="tile-content">
+				</div>
+				<div class="tile-status">
+					<span class="name">Little crime in Knightsbridge</span>
+				</div>
+			</div>
+
+			<div class="tile quadro triple-vertical bg-violet" data-click="transform">
+				<div class="tile-content">
+					
+				</div>
+
+				<div class="tile-status">
+					<span class="name">WUMBO COMBO</span>
+				</div>
+			</div>
 		</div>
+		<script>
+		function tilesRefresh() {
+			alert("You can now refresh your tiles");
+
+		}
+
+
+			$('#textfield').bind("enterKey",function(e){
+			 	alert("Enter");
+		 	});
+			$('#textfield').keyup(function(e){
+		if(e.keyCode == 13)	
+		{
+			//$(this).trigger("enterKey");
+			call('football',tilesRefresh);
+		}
+		});
 		
+		</script>
 	</body>
 </html>
