added dropdown for the millionth time

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,20 @@
 						</div>
 					</form>
 				</div>
+
+				<div class="element input-element place-right">
+					<form >
+						<div class="input-control select">
+							<select name="location">
+								<option value="london">London</option>
+								<option value="reading">Reading</option>
+								<option value="birmingam">Birmingham</option>
+								<option value="oxford">Oxford</option>
+								<option value="cambridge">Cambridge</option>
+							</select>
+						</div>
+					</form>
+				</div>
 			</nav>
 		</nav>
 		<div class="main">
