--- a/www/index.html
+++ b/www/index.html
@@ -103,6 +103,10 @@
 			</div>
 			<div class="tile double bg-amber" data-role="live-tile" data-effect="slideDown" data-click="transform">
 				<div class="tile-content fa fa-map-marker .on-left-more ">
+					<div class="textTileContent">
+					<h3>Crimes that were committed</h3>
+				</div>
+				<div id="bigNum" >14</div>
 				</div>
 			</div>
 			
