--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
 					<canvas id="myChart1" width="490" height="490" ></canvas>
 				</div>
 				<div class="tile-status">
-					<span class="name">LF Projections</span>
+					<span class="name">LF Projections [TestValues]</span>
 				</div>
 			</div>
 			<!-- Graphing from /onet?-->
@@ -67,7 +67,7 @@
 					<canvas id="myChart2" width="230" height="230" ></canvas>
 				</div>
 				<div class="tile-status">
-					<span class="name">LF Projections</span>
+					<span class="name">ONET Weights [TestValues]</span>
 				</div>
 			</div>
 			<!-- user's current co-ordinates -->
@@ -86,7 +86,7 @@
 					<div class="textTileContent">
 						<h3>Distance</h3>
 						<p>Commute Distance: <span id="ddistance"></span</p>
-						<p>Commute Price: <span id="dprice"></p>
+						<p>Commute Price: <span id="dprice"></span></p>
 					</div>
 				</div>
 			</div>
@@ -95,7 +95,7 @@
 					<div class="textTileContent">
 					<h3>Crimes that were committed</h3>
 				</div>
-				<div id="bigNum" ><span id="dcrimes"></div>
+				<div id="bigNum" ><span id="dcrimes"></span></div>
 				</div>
 			</div>
 			
