--- a/www/index.html
+++ b/www/index.html
@@ -95,7 +95,7 @@
 					<div class="textTileContent">
 					<h3>Crimes that were committed</h3>
 				</div>
-				<div id="bigNum" ><span id="dcrimes"></span></div>
+				<div id="bigNum" ><span id="dcrime"></span></div>
 				</div>
 			</div>
 			
@@ -167,6 +167,6 @@ function fillerData(){
 		]
 		};
 		var myNewChart = new Chart(ctx).Line(data);
-		var myNewChart2 = new Chart(ctx2).Radar(data);
+		var myNewChart2 = new Chart(ctx2).Radar(data2);
 	}
 </script>
