--- a/www/index.html
+++ b/www/index.html
@@ -108,7 +108,7 @@
 			document.getElementById("dprice").innerHTML = retvals['distanceCost'];
 			document.getElementById("dcrime").innerHTML = 14;
 
-			<!-- Added to display map -->
+			// Added to display map 
 			var frame = document.getElementById("frame");
 			var doc = frame.document;
     		if(frame.contentDocument)
@@ -119,7 +119,7 @@
     		doc.open();
     		doc.writeln(retvals["map"]);
     		doc.close();
-    		<!-- End of map -->
+    		// End of map 
 
 		}
 
