--- a/www/index.html
+++ b/www/index.html
@@ -41,11 +41,11 @@
 			<div class="tile quadro quadro-vertical bg-lightGreen" data-role="live-tile" data-effect="slideDown" data-click="transform">
 				<div class="tile-content">
 					<iframe
+					id="frame"
 					width="580"
 					height="580"
 					frameborder="0" style="border:0"
-					src="https://www.google.com/maps/embed/v1/place?key=AIzaSyChxIfLP34zKgYgSByBJxgW16esZtwWOqw
-					&q=Space+Needle,Seattle+WA">
+					src="https://www.google.com/maps/embed/v1/place?key=AIzaSyChxIfLP34zKgYgSByBJxgW16esZtwWOqw&q=Space+Needle,Seattle+WA">
 					</iframe>
 				</div>
 				<div class="tile-status">
