--- a/www/index.html
+++ b/www/index.html
@@ -109,6 +109,7 @@
 			document.getElementById("dcrime").innerHTML = 14;
 
 			// Added to display map 
+			// TODO make call through localhost proxy
 			var frame = document.getElementById("frame");
 			var doc = frame.document;
     		if(frame.contentDocument)
